# memrelay

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  SMOKE.md  e0-spike.md  e4-engine-notes.md  e6e7-skeleton-notes.md  release-gate.md  troubleshooting.md
docs/adr/: 0001-graph-backends.md  0001-graph-storage-ladybug.md
scripts/: capture_fixture.py  engine_demo.py  first_run_smoke.py  ingest_fixture.py  smoke_e2e.py
src/memrelay/: __init__.py  __main__.py  cli.py  config.py  guidance.py  logging_config.py
src/memrelay/daemon/: __init__.py  lifecycle.py  protocol.py  runtime.py  server.py  session_discovery.py  transport.py
src/memrelay/engine/: __init__.py  compaction.py  embedder.py  graphiti.py  kuzu_backend.py
src/memrelay/engine/backends/: __init__.py  _deltas.py  _fts_extension.py  base.py  falkordb_backend.py  kuzu_backend.py  ladybug_backend.py  ladybug_driver.py  neo4j_backend.py  neptune_backend.py  registry.py
src/memrelay/engine/llm/: __init__.py  borrow_host.py  byo_key.py  local.py  strategy.py
src/memrelay/ingest/: __init__.py  backoff.py  console_sink.py  episode.py  fixture_runner.py  git_seed.py  graphiti_sink.py  ingester.py  phase_guard.py  spool.py  summarizer.py
src/memrelay/mcp/: __init__.py  client.py  format.py  namespace.py  server.py  tools.py
src/memrelay/providers/: __init__.py  _live_source.py  aider.py  amazon_q.py  antigravity.py  base.py  claude_code.py  cline.py  codex.py  continue_dev.py  copilot.py  crewai.py  goose.py  langgraph.py  maf.py  openai_agents.py  opencode.py  openhands.py  pydantic_ai.py  registry.py  smolagents.py  swe_agent.py
tests/: conftest.py
tests/eval/: README.md  _embedder.py  _generator.py  _harness.py  _precision.py  baseline.json  generate_baseline.py  test_baseline_floor_gate.py  test_offline_extension.py  test_precision_at_k.py
tests/fixtures/: README.md  aider_session.jsonl  amazonq_session.jsonl  antigravity_session.jsonl  claude_session.jsonl  cline_session.jsonl  codex_session.jsonl  continue_session.jsonl  copilot_session.jsonl  crewai_session.jsonl  goose_session.jsonl  langgraph_session.jsonl  maf_session.jsonl  openai_agents_session.jsonl  opencode_session.jsonl  openhands_session.jsonl  pydantic_ai_session.jsonl  smolagents_session.jsonl  sweagent_session.jsonl
tests/integration/: conftest.py  test_agent_conformance.py  test_backend_smoke.py  test_compaction.py  test_cross_agent_recall.py  test_cross_agent_unify.py  test_daemon_engine.py  test_engine_roundtrip.py  test_filewatch_parity_e2e.py  test_forget.py  test_gate_skeleton.py  test_ingestion_robustness_soak.py  test_invalidate.py  test_kuzu_fallback.py  test_live_source.py  test_mcp_engine_roundtrip.py  test_mcp_stdio_roundtrip.py  test_observe_pipeline.py  test_observe_to_engine_e2e.py  test_phase_enrichment_e2e.py  test_registry_observe.py  test_release_gate_roundtrip.py  test_replay_open_workunit_dedup_e2e.py  test_seed.py  test_session_discovery_e2e.py  test_spool_ingester.py  test_walking_skeleton.py
tests/unit/: conftest.py  test_agent_provenance.py  test_backend_registry.py  test_backoff.py  test_borrow_host.py  test_borrow_host_invocation.py  test_claude_provider.py  test_cli.py  test_cli_daemon.py  test_cli_errors.py  test_cli_forget.py  test_cli_guidance.py  test_cli_init_corrupt_mcp.py  test_cli_init_fts.py  test_cli_init_ingest_only.py  test_cli_init_model.py  test_cli_observe.py  test_cli_resolve_provider.py  test_cli_seed.py  test_cloud_backends.py  test_config.py  test_config_byokey.py  test_config_expand.py  test_config_intake_source.py  test_config_namespaces.py  test_copilot_filewatch_source.py  test_copilot_source.py  test_daemon_client.py  test_daemon_ipc.py  test_daemon_runtime.py  test_embedder.py  test_embedder_offline.py  test_engine_compaction.py  test_engine_invalidate.py  test_engine_lifecycle.py  test_engine_search_timeout.py  test_episode.py  test_episode_agent.py  test_episode_repo.py  test_format.py  (+39 more)
