[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memrelay"
# Single-sourced from src/memrelay/__init__.py (__version__) via [tool.hatch.version]
# below, so `memrelay --version` and the wheel/PyPI metadata can never drift.
dynamic = ["version"]
description = "Portable, graph-based persistent memory for AI coding agents."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11,<3.14"
authors = [{ name = "David Finson" }]
keywords = ["memory", "graphiti", "traceforge", "coding-agents", "mcp", "knowledge-graph"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

# Runtime dependencies (SPEC §8). traceforge-toolkit pins Python <3.14, which is
# why requires-python caps there.
dependencies = [
    "traceforge-toolkit>=0.1,<0.2",  # import name: traceforge — normalizes ~18 agents to SessionEvent; capped <0.2 because the walking-skeleton test asserts exact 0.1.x mapping/enrich behavior
    "litellm>=1.0,<1.92",  # pulled in transitively by traceforge-toolkit (which pins litellm>=1.0 with NO upper bound). Declared DIRECT + capped here so pip can never select litellm 1.92.0+, which dropped the universal py3-none-any wheel and now ships ONLY Linux manylinux_2_28 wheels + a Rust sdist — so an uncapped fresh install needs a Rust/Cargo toolchain on Windows/macOS/musl/older-glibc/other arches and fails there (docs/SMOKE.md Wall B). 1.91.3 is the last release with a universal wheel, so <1.92 resolves Rust-free on every platform. The durable fix belongs UPSTREAM (an upper bound in traceforge-toolkit, or litellm restoring a universal wheel); this cap is memrelay defending its own zero-config installability. Drop/raise it once upstream ships a wheel-complete release.
    "graphiti-core>=0.29,<0.30",  # knowledge graph engine (bitemporal facts, LLM extraction, dedup, RRF); capped <0.30 for CI determinism. We keep graphiti's brain but inject our own storage driver reporting provider=KUZU, so its Kuzu-dialect Cypher is reused verbatim (see docs/adr/0001-graph-backends.md, #76)
    "ladybug>=0.18,<0.18.1",     # embedded graph database — the original Kuzu devs' maintained, Kuzu-API/Cypher drop-in fork. Replaces the archived `kuzu` as the OOTB default storage backend (#76). Upper bound: upstream yanked v0.18.1's FTS extension from the CDN (404); 0.18.0's is still hosted. See #114. Drop the bound once 0.18.1 (or later) republishes its extension.
    "certifi>=2023.7",            # CA bundle used to reliably prefetch Ladybug's FTS extension over TLS; its manylinux native downloader fails SSL verification on Linux (#76, see engine/backends/_fts_extension.py)
    "fastembed>=0.3",             # local ONNX embeddings
    "mcp>=1.0",                   # Model Context Protocol server
    "click>=8.0",                 # CLI
    "structlog>=23.0",            # structured logging
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pre-commit>=3.5",
]
# Cloud opt-in backends (#76): each extra pulls the client stack that graphiti-core's
# own native driver hard-imports. NOT part of the default install — OOTB memrelay ships
# the embedded LadybugDB and never pulls these. Pins mirror graphiti-core's own.
# (Neo4j needs NO extra: `neo4j>=5.26.0` is already a hard dependency of graphiti-core,
# so the Neo4j opt-in works with connection config alone.)
falkordb = [
    "falkordb>=1.1.2,<2.0.0",
]
neptune = [
    "boto3>=1.39.16",
    "langchain-aws>=0.2.29",
    "opensearch-py>=3.0.0",
]
# Phase enrichment opt-in (#98, E2-S6). `enable_phase = true` runs traceforge's trained
# workflow-phase classifier, which embeds episode text with a vendored model2vec model.
# model2vec / scikit-learn / scipy / joblib are already hard deps of traceforge-toolkit,
# so a default install can run phase inference — EXCEPT that `requests` is only pulled
# transitively (via huggingface_hub) and can be absent in trimmed environments, which
# makes phase inference silently stamp nothing. This extra makes the full phase stack
# explicit and guarantees `requests`. NOT part of the default install: the zero-config
# default (enable_phase=false) needs none of it and stays deterministic/offline. No model
# download either — the phase bundle and the embedder ship *inside* the traceforge package.
phase = [
    "model2vec>=0.8.2",
    "scikit-learn>=1.5",
    "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/dfinson/memrelay"
Repository = "https://github.com/dfinson/memrelay"
Issues = "https://github.com/dfinson/memrelay/issues"

[project.scripts]
memrelay = "memrelay.__main__:main"

[tool.hatch.version]
path = "src/memrelay/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/memrelay"]

[tool.hatch.build.targets.sdist]
include = ["src/memrelay", "README.md", "SPEC.md", "LICENSE", "docs", "tests"]

# ─── Tooling ──────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "W",    # pycodestyle warnings
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "SIM105",  # contextlib.suppress over try/except/pass — not always clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "integration: end-to-end tests that exercise the traceforge pipeline",
]
